<resources>
    <string name="app_name">PulseStep Application</string>
    <string name="light">fonts/Light.otf</string>
    <string name="bold">fonts/extrabold.otf</string>
    <string name="empty_label"></string>
    <string name="sample_username">Linh Nguyen</string>


    <!--    Ranking Page -->
    <!--    Ranking page - title -->
    <string name="rank_title">Daily Sports Rankings</string>
    <string name="progress_title"> YOUR PROGRESS</string>
    <string name="target_title">Daily target</string>
    <!--    sample string for ranking list -->
    <string-array name="sample_ranking_no">
        <item>01.</item>
        <item>02.</item>
        <item>03.</item>
        <item>04.</item>
        <item>05.</item>
        <item>06.</item>
        <item>07.</item>
        <item>08.</item>
        <item>09.</item>
        <item>10.</item>
    </string-array>

    <string-array name="sample_ranking_user_names">
        <item>Budi Santoso</item>
        <item>Budi Santoso</item>
        <item>Budi Santoso</item>
        <item>Budi Santoso</item>
        <item>You</item>
        <item>Budi Santoso</item>
        <item>Budi Santoso</item>
        <item>Budi Santoso</item>
        <item>Budi Santoso</item>
        <item>Budi Santoso</item>
    </string-array>

    <string-array name="sample_ranking_times">
        <item>12.5 hours</item>
        <item>10 hours</item>
        <item>9 hours</item>
        <item>7.2 hours</item>
        <item>7.1 hours</item>
        <item>4 hours</item>
        <item>3.1 hours</item>
        <item>2 hours</item>
        <item>1.5 hours</item>
        <item>1 hour</item>
    </string-array>
    <!--    Dialog - Set daily Target-->
    <string name="set_target_title">Set Your Target</string>
    <string name="bt_cancel">CANCEL</string>
    <string name="bt_set">SET</string>
    <string name="reset_password_context">Forget your password? Click confirm to set a new password</string>
    <string name="set_new_password_context">Click send reset email to reset your password. Ensure it differs from previous ones for security</string>
    <string name="successfully_reset_password">Reset email has benn send!\nCheck your email and follow steps.\nClick continue to login.</string>
    <!-- Switch rank list button    -->
    <string name="bt_daily">Daily</string>
    <string name="bt_monthly">Monthly</string>
</resources>