<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".RankingFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/daily_rank_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/bt_switch_rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="30dp"
                app:checkedButton="@id/bt_daily"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/bt_daily"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_daily"
                    android:textColor="@drawable/bt_text_color_selector"
                    android:textStyle="bold"
                    app:strokeColor="@color/white" />

                <Button
                    android:id="@+id/bt_monthly"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_monthly"
                    android:textColor="@drawable/bt_text_color_selector"
                    android:textStyle="bold"
                    app:strokeColor="@color/white" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:id="@+id/rank_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:fontFamily="@font/inter_extra_bold_italic"
                android:gravity="center"
                android:paddingTop="20sp"
                android:paddingBottom="30dp"
                android:text="@string/rank_title"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bt_switch_rank" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/rank_progress"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/light_orange"
        app:layout_constraintTop_toBottomOf="@id/daily_rank_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/progress_orange">

            <TextView
                android:id="@+id/progress_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/progress_title"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/target_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/target_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/target_title"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progress_title" />

            <TextView
                android:id="@+id/progress_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_bold"
                android:text="7.1/"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintEnd_toStartOf="@id/daily_target_hours"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/daily_target_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/inter_bold"
                android:text="-- hours"
                android:textColor="@color/white"
                android:textSize="28sp"

                app:layout_constraintEnd_toStartOf="@id/bt_set_target"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/bt_set_target"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_edit_24"
                app:layout_constraintBottom_toBottomOf="@id/progress_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/progress_detail" />

            <!-- Progress Bar -->
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/progress_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/target_title" />  <!-- 当前进度设为 71% -->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/rank_you"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@id/rank_progress">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_orange">

            <TextView
                android:id="@+id/you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="You"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/you_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/you_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/you_name"
                app:layout_constraintStart_toEndOf="@id/you"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/you_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="Heizi"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/you_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/you_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="7.1 hours"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.47" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ranking_List"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rank_you" />

</androidx.constraintlayout.widget.ConstraintLayout>